			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

02-Dec-2001
~~~~~~~~~~~
Added 'Invert Selection' (Stephen Watson; suggested by Andras Mohari).

01-Dec-2001
~~~~~~~~~~~
Added a new root window property (_ROX_FILER_EUID_HOST) which points to
the SOAP IPC window for a particular hostname and user ID. This makes it
easier for other programs to talk to the filer.

30-Nov-2001
~~~~~~~~~~~
Added new SOAP methods Copy, Move, Link, Mount and FileType (Stephen Watson).

29-Nov-2001
~~~~~~~~~~~
Moved 'Select All', 'Clear Selection' and 'Select If...' to a new 'Select'
submenu.
The filer now closes stdin when it starts. This is to prevent child
processes, such as auto-mounters, from trying to read a password from
the console (Olivier Fourdan).

27-Nov-2001
~~~~~~~~~~~
Manpage is now generated automatically from DocBook source.
Short forms for many find expressions, such as -d for IsDir (suggested by
(Andras Mohari).

26-Nov-2001
~~~~~~~~~~~
More Gtk+-1.3.11 support, including use of the new message dialog.
When the filer loses the primary selection, display the selected items
shaded, but don't unselect them (Andras Mohari).

24-Nov-2001
~~~~~~~~~~~
Updated to Gtk+-1.3.11.

23-Nov-2001
~~~~~~~~~~~
Show the current run action for a file in the Info box (Stephen Watson).

21-Nov-2001
~~~~~~~~~~~
If a panel applet quits then it is removed from the panel, instead of being
replaced by a Restart button.

16-Nov-2001
~~~~~~~~~~~
With Gtk+-2.0 and the 'Unique windows' option on, reshow the existing window
instead of destroying it and creating a new one (suggested by Greg Spath).

15-Nov-2001
~~~~~~~~~~~
Changes to the French translation (Thierry Godefroy and Vincent Lefevre).

14-Nov-2001
~~~~~~~~~~~
Code tidying in menu.c (Bernard Jungen).

13-Nov-2001
~~~~~~~~~~~
Opening a filer window from the Set Icon dialog turns thumbnails display
on (suggested by Francesco Bochicchio).
Right-clicking the Help toolbar button reuses the same window.

12-Nov-2001
~~~~~~~~~~~