@@ -142,7 +142,7 @@ AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h mntent.h sys/ucred.h sys/mntent.h)
-AC_CHECK_HEADERS(locale.h regex.h)
+AC_CHECK_HEADERS(regex.h)
 
 rox_ARG_WITH(vfs,
   [  --with-vfs[=prefix]     use libvfs for virtual file system [search it in prefix/include and prefix/lib]])
