@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+03-Dec-2001
+~~~~~~~~~~~
+Use gtk_set_locale instead of setlocale (Andras Mohari).
+
 02-Dec-2001
 ~~~~~~~~~~~
 Added 'Invert Selection' (Stephen Watson; suggested by Andras Mohari).
